--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.3",
+    "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.4",
     "expo": "~48.0.5",
-    "expo-font": "^11.1.1",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.3",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-select-two": "^1.1.0",
     "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1"
+    "react-navigation": "^4.4.4",
+    "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
